# router_bug

./: README.md  cargo.toml
app/: Cargo.toml  Trunk.toml  index.html
app/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/static/: index-250bb8039a05a250.js  index-250bb8039a05a250_bg.wasm  index.html
